@@ -1,7 +1,9 @@
 === Version 0.8
 * Enhancements
-  * Added divs class level method to return all elements matching the locator
-  * Added buttons class level method to return all elements matching the locator
+  * Added the following class level method to return all elements matching the locator
+    * divs
+    * buttons
+    * text_fields
   * Added ability to register and use custom elements based on standard elements (William Powell)
   * Added generated method to return text for a table
   * Added generated method to return text for an unordered list
